Bug 75292 - [ILK Bisected]Piglit spec_ARB_depth_texture_fbo-clear-formats fails
Summary: [ILK Bisected]Piglit spec_ARB_depth_texture_fbo-clear-formats fails
Status: VERIFIED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: unspecified
Hardware: All Linux (All)
: high major
Assignee: Kenneth Graunke
QA Contact: Intel 3D Bugs Mailing List
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-02-21 02:11 UTC by lu hua
Modified: 2014-02-28 06:59 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description lu hua 2014-02-21 02:11:44 UTC
System Environment:
--------------------------
Platform: Ironlake
Libdrm:		(master)libdrm-2.4.52-4-gc5de5abbd90333fe1359283fb3a5e457b0f389f3
Mesa:		(master)57405605a8c320f9d6ea389afd43ce6f013330a5
Xserver:	(master)xorg-server-1.15.0-627-gf34dc7fa96457ea6a0703493d74e63cca357712e
Xf86_video_intel:(master)2.99.910-47-gc91af569ee90a832899c9038badd84921e9a87fc
Cairo:		(master)4144307dbfbe7b297135d9ea4b080cae7e06b997
Libva:		(staging)fae9c44816a4c3cfc480d2879d1b4a0c1c3a1527
Libva_intel_driver:(staging)bd630edd844b88ea543a027654db296ff7da16cd
Kernel:	(drm-intel-nightly) 164a4cb4c1431a0689f85507868356fae24da638

Bug detailed description:
-------------------------
It fails on Ironlake with mesa master branch, works well on 10.1 branch.
Following piglit cases also fail with same bisect commit:
spec_ARB_depth_buffer_float_fbo-clear-formats
spec_EXT_packed_depth_stencil_fbo-clear-formats

Bisect shows: f128bcc7c293013f4b44e4b661638333de0077c2 is the first bad commit.
commit f128bcc7c293013f4b44e4b661638333de0077c2
Author:     Eric Anholt <eric@anholt.net>
AuthorDate: Fri Feb 14 13:00:40 2014 -0800
Commit:     Eric Anholt <eric@anholt.net>
CommitDate: Tue Feb 18 10:01:45 2014 -0800

    i965: Drop mt->levels[].width/height.

    It often confused people because it was unclear on whether it was the
    physical or logical, and people needed the other one as well.  We can
    recompute it trivially using the minify() macro, clarifying which value is
    being used and making getting the other value obvious.

    v2: Fix a pasteo in intel_blit.c's dst flip.

    Reviewed-by: Chris Forbes <chrisf@ijw.co.nz> (v1)
    Reviewed-by: Kenneth Graunke <kenneth@whitecape.org>

output:
Using test set: GL_ARB_depth_texture
Testing GL_DEPTH_COMPONENT
Probe color at (516,2)
  Expected: 0.250000 0.250000 0.250000
  Observed: 0.000000 0.000000 0.000000
PIGLIT:subtest {'GL_DEPTH_COMPONENT' : 'fail'}
Testing GL_DEPTH_COMPONENT16
Probe color at (516,2)
  Expected: 0.250000 0.250000 0.250000
  Observed: 0.000000 0.000000 0.000000
PIGLIT:subtest {'GL_DEPTH_COMPONENT16' : 'fail'}
Testing GL_DEPTH_COMPONENT24
Probe color at (516,2)
  Expected: 0.250000 0.250000 0.250000
  Observed: 0.000000 0.000000 0.000000
PIGLIT:subtest {'GL_DEPTH_COMPONENT24' : 'fail'}
Testing GL_DEPTH_COMPONENT32
Probe color at (516,2)
  Expected: 0.250000 0.250000 0.250000
  Observed: 0.000000 0.000000 0.000000
PIGLIT:subtest {'GL_DEPTH_COMPONENT32' : 'fail'}
PIGLIT: {'result': 'fail' }

Reproduce steps:
-------------------------
1. xinit
2. ./bin/fbo-clear-formats GL_ARB_depth_texture -fbo -auto
Comment 1 Kenneth Graunke 2014-02-23 07:47:41 UTC
Patch on mailing list:
http://lists.freedesktop.org/archives/mesa-dev/2014-February/054775.html
Comment 2 Kenneth Graunke 2014-02-26 10:27:11 UTC
Fixed in master with:

commit b18871c863fabec3ed383881d2cdd0298b157b06
Author: Kenneth Graunke <kenneth@whitecape.org>
Date:   Sat Feb 22 23:47:30 2014 -0800

    i965: Don't forget to subtract mt->first_level in minify calls.
    
    This fixes fbo-clear-formats GL_ARB_depth_texture on Ironlake, which
    regressed since commit f128bcc7c293013f4b44e4b661638333de0077c2
    ("i965: Drop mt->levels[].width/height.")  intel_miptree_copy_slice was
    calling minify(.., 7) on a 2x2 texture with mt->first_level == 7.
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=75292
    Signed-off-by: Kenneth Graunke <kenneth@whitecape.org>
    Reviewed-by: Eric Anholt <eric@anholt.net>

The commit which caused the regression does not exist in 10.1.
Comment 3 lu hua 2014-02-28 06:59:13 UTC
Verified.Fixed.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.